// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`no-unused-vars\`](https://eslint.org/docs/latest/rules/no-unused-vars).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by \`other-plugin/no-unused-vars\`.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by \`other-plugin/no-foo\`.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. | ❌  |
| [no-baz](docs/rules/no-baz.md) | Description. | ❌  |
| [no-biz](docs/rules/no-biz.md) | Description. |    |
| [no-boz](docs/rules/no-boz.md) | Description. | ❌  |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 3`] = `
"# test/no-bar

❌ This rule is deprecated.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 4`] = `
"# test/no-baz

❌ This rule is deprecated.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 5`] = `
"# test/no-biz

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 6`] = `
"# test/no-boz

❌ This rule is deprecated. It was replaced by [\`test/no-baz\`](no-baz.md), [\`test/no-biz\`](no-biz.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 3`] = `
"# test/no-bar

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                              | Description  | ❌  |
| :------------------------------------------------ | :----------- | :- |
| [category/no-bar](docs/category/no-bar/README.md) | Description. | ❌  |
| [category/no-foo](docs/category/no-foo/README.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 2`] = `
"# test/category/no-foo

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](../no-bar/README.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 3`] = `
"# test/category/no-bar

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](../no-foo/README.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                             | Description  | ❌  |
| :----------------------------------------------- | :----------- | :- |
| [category/no-bar](docs/rules/category/no-bar.md) | Description. | ❌  |
| [category/no-foo](docs/rules/category/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 2`] = `
"# test/category/no-foo

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](no-bar.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 3`] = `
"# test/category/no-bar

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](no-foo.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with no rule doc but --ignore-deprecated-rules omits the rule from the README and does not try to update its non-existent rule doc 1`] = `
"<!-- begin auto-generated rules list -->

| Name |
| :--- |

<!-- end auto-generated rules list -->"
`;
